src/tests/il/negatives/missing_entry_block.il
il 0.3.0
func @main() -> void {
loop:
  ret
}
